fix: hero text alignment

--- a/front/src/assets/css/Focus.css
+++ b/front/src/assets/css/Focus.css
@@ -285,7 +285,8 @@ header {
 .hero h1 {
     font-size: 68px;
     margin: 0;
-    width: 700px
+    width: 700px;
+    text-align: left;
 }
 
 .hero {
